# revel-backend

./: .env.example  .gitignore  .test_durations  AI_USAGE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  Makefile  PLAN-350-attendee-invoicing.md  README.md  SECURITY.md  USER_JOURNEY.md  USER_JOURNEYS.md  compose.yaml  copy_source.sh  docker-compose-base.yml  docker-compose-ci.yml  docker-compose-dev.yml  docker-compose-e2e.yml  docker-compose-observability.yml  entrypoint.sh  i18n.md  mkdocs.yml  pyproject.toml  toc.md
.claude/agents/: pr-reviewer.md  tech-debt-assessor.md  tech-debt-verifier.md  test-engineer.md  vuln-analyst.md  vuln-verifier.md
.claude/commands/: logs.md  release.md  tech-debt.md  update-changelog.md  vuln-scan.md  whats-new.md
.claude/skills/loki-logs/: SKILL.md
.claude/skills/update-changelog/: SKILL.md
.claude/skills/updating-deps/: SKILL.md
.claude/skills/whats-new/: SKILL.md
.github/: FUNDING.yml
.github/actions/setup-backend/: action.yml
.github/workflows/: bandit.yaml  build.yaml  deps-noop.yaml  deps.yaml  docs.yaml  nightly-audit.yml  publish-beta.yaml  publish.yaml  refresh-test-durations.yaml  release.yaml  test.yaml
benchmark/: __init__.py
benchmark/seating_load/: __init__.py  __main__.py  harness.py  scenarios.py
docs/: PROTECTED_FILES_CADDY.md  engineering-notes.md  index.md
docs/adr/: 0000-no-async-orm.md  0001-hmac-caddy-over-s3.md  0002-hybrid-service-architecture.md  0003-django-ninja-over-drf.md  0003-uv-over-pip.md  0004-django-ninja-over-drf.md  0004-no-dependency-injection.md  0005-django-lts-policy.md  0005-no-dependency-injection.md  0006-django-lts-policy.md  0006-mo-files-in-git.md  0007-celery-exception-propagation.md  0007-mo-files-in-git.md  0008-celery-exception-propagation.md  0008-environment-feature-flags.md  0009-referral-payout-bounded-contexts.md  0010-dependency-compliance.md  0011-membership-subscriptions-offline-online-hybrid.md  0011-mo-files-built-not-committed.md  0012-stripe-connect-direct-charges-subscriptions.md  0013-subscription-terminal-states-and-revival.md  0014-reactive-dunning-and-simple-history-audit.md  index.md
docs/architecture/: billing-and-vat.md  controllers.md  eligibility-pipeline.md  exports.md  index.md  membership-subscriptions.md  moderation.md  notifications.md  permissions.md  polls.md  protected-files.md  questionnaires.md  recurring-series.md  scheduled-announcements.md  security.md  series-passes.md  service-layer.md  waitlist.md
docs/contributing/: ci-pipeline.md  code-style.md  dependency-management.md  index.md  testing.md
docs/getting-started/: development-commands.md  index.md  project-structure.md  quickstart.md  troubleshooting.md
docs/guides/: demo-and-seeding.md  index.md  internationalization.md  observability.md  telegram-bot.md  user-journey.md
docs/guides/seating/: box-office.md  buyer-experience.md  index.md  tiers-and-pricing.md  venue-and-layout.md
docs/postmortems/: 0001-guest-user-verification-bypass.md  0002-server-side-cursor-pgbouncer.md  0003-ssr-post-body-loss-internal-api-path.md  index.md
docs/runbooks/: admin-groups.md  dependency-audit.md  rate-limit-429s.md  stripe-hardening-rollout.md  stripe-webhook-endpoints.md
docs/self-hosting/: dns-cloudflare.md  index.md  maintenance.md  observability.md  quickstart.md  tiers.md  troubleshooting.md
docs/superpowers/plans/: 2026-04-23-user-ticket-cancellation.md
docs/superpowers/specs/: 2026-04-23-user-ticket-cancellation-design.md
docs/whats-new/: 2026-06-22-last-month.md  index.md
observability/: ASYNC_LOGGING.md  CI_TESTING_NOTES.md  GRAFANA_ALERTING.md  OBSERVABILITY_IMPLEMENTATION.md  OBSERVABILITY_SPEC.md  PROFILING_IMPLEMENTATION_SUMMARY.md  alloy-config.alloy  grafana-dashboards.yaml  grafana-datasources.yaml  loki-config.yaml  prometheus-config.yml  tempo-config.yaml
scripts/: check-file-length.sh  check_task_names.py  check_translations.py  loki_logs.py  silk_debug.py
src/: conftest.py  gunicorn.conf.py  manage.py  playground.py
src/accounts/: admin.py  admin_referral.py  apps.py  jwt.py  models.py  password_validation.py  schema.py  signals.py  tasks.py  validators.py
src/accounts/admin/: billing.py  (+6 more)
src/api/: admin.py  api.py  apps.py  exception_handlers.py  models.py  tasks.py
src/common/: admin.py  apps.py  auth_base.py  authentication.py  client_ip.py  constants.py  controllers.py  exception_handlers.py  fields.py  middleware.py  models.py  sanitizers.py  schema.py  signing.py  tasks.py  testing.py  throttling.py  types.py  utils.py
src/events/: admin.py  announcement_tasks.py  apps.py  email_helpers.py  exception_handlers.py  exceptions.py  filters.py  revenue_tasks.py  schema.py  signals.py  suppression.py  tasks.py  tasks_stripe.py  utils.py
src/geo/: admin.py  conf.py  filters.py  ip2.py  middleware.py  models.py  schema.py  service.py  tasks.py
src/moderation/: admin.py  apps.py  exception_handlers.py  exceptions.py  models.py  registry.py  schema.py  tasks.py
src/notifications/: __init__.py  admin.py  apps.py  context_schemas.py  enums.py  filters.py  models.py  schema.py  signals.py  tasks.py  types.py  utils.py
src/polls/: admin.py  apps.py  controllers.py  exception_handlers.py  exceptions.py  models.py  permissions.py  schema.py  signals.py  tasks.py  types.py  utils.py
src/questionnaires/: README.md  admin.py  apps.py  controllers.py  evaluator.py  exception_handlers.py  exceptions.py  models.py  schema.py  service.py  tasks.py
src/revel/: __init__.py  asgi.py  celery.py  dashboard.py  urls.py  wsgi.py
src/telegram/: admin.py  apps.py  bot.py  commands.py  controllers.py  fsm.py  keyboards.py  middleware.py  models.py  notification_keyboards.py  schema.py  service.py  signals.py  tasks.py  utils.py
src/templates/: _fonts.html
src/wallet/: __init__.py  admin.py  apps.py  controllers.py  models.py  protocols.py  schemas.py  service.py  signals.py  tasks.py
tests/performance/: .env.example  .env.test  .gitignore  Makefile  README.md  __init__.py  config.py  docker-compose-test.yaml  locustfile.py
(+1636 files in other folders)
